tests/src/frontend/typechecking/invalid/const_with_generic.sk
class A<T>() {
  const v: Array<T> = Array[];
}
